--- a/2015-02-09-swift-1.2.md
+++ b/2015-02-09-swift-1.2.md
@@ -4,13 +4,13 @@ category: Swift
 author: Nate Cook
 tags: swift
 translator: Croath Liu
-excerpt: "Swift 正如其名，速度飞快。随着 Swift 1.2 beta 版本的发布，其开发团队在这次快速加速俯冲中一次性响应了开发社区的诸多需求，带来了许多让激动人心的新特性。本周我们会花一点时间关注这个版本的两个明显提升使用体验的新功能：一个是 `if let` 语句 optional 绑定的巨大变化，另一个是对 Objective-C 的调用结果可返回空。"
+excerpt: "Swift 正如其名，速度飞快。随着 Swift 1.2 beta 版本的发布，其开发团队在这次快速加速俯冲中一次性响应了开发社区的诸多需求，带来了许多让激动人心的新特性。本周我们会花一点时间关注这个版本的两个明显提升使用体验的新功能：一个是 `if let` 语句 optional 绑定的巨大变化，另一个是 Objective-C 中的空值标注。"
 hiddenlang: ""
 ---
 
 Swift 正如其名，速度飞快。本周将关注 Swift 1.2 版本的一个 *重大* 更新。Swift 开发团队在这次快速加速俯冲中一次性响应了开发社区的诸多需求，带来了许多让激动人心的新特性。本次发布的每一个小更新都带来了巨大的好处：增量构建、丰富了 Xcode 中的错误信息、提升 Xcode 稳定性、静态类属性、支持 C 的 union 和 bitfield、将 Swift 中的 `enum` 打通到 Objective-C 中、更安全的类型转换、单行闭包的提升等等。
 
-在这么多的更新中我们主要关注两个明显提升使用体验的新功能：一个是 `if let` 语句 optional 绑定 *终于有了* 巨大变化，另一个是对 Objective-C 的调用结果可返回空。
+在这么多的更新中我们主要关注两个明显提升使用体验的新功能：一个是 `if let` 语句 optional 绑定 *终于有了* 巨大变化，另一个是 Objective-C 中的空值标注。
 
 
 ## 提升 Optional 绑定
@@ -130,24 +130,24 @@ if let
 
 
 
-## 空返回调用
+## 空值标注
 
-在 Swift 第一版发布的时候，每一个对 Cocoa API 的调用方法都会返回一个解析得奇怪的 optional 类型（比如说 `AnyObject!`）。因为它们会在读取过程中让程序崩溃，所以如果没有清晰的文档表明该方法是否会返回一个 null 值name这种含蓄的解析内在是不安全的。这些都是不好的现象。Swift 确实能够调用 Cocoa API 了，但调用方法长得真奇怪。
+在 Swift 第一版发布的时候，每一个对 Cocoa API 的调用方法都会返回一个模糊解析的 optional 类型（比如说 `AnyObject!`）。因为它们会在读取过程中让程序崩溃，所以如果没有清晰的文档表明该方法是否会返回一个 null 值name这种模糊解析内在是不安全的。这些都是不好的现象。Swift 确实能够调用 Cocoa API 了，但调用方法长得真奇怪。
 
-随着 beta 发布的完善，内部评估中不断移除不友好的标点符号，用真 optional 、非 optional 或永不为空的值来替代含蓄解析的 optional。这极大提高了使用 Cocoa 时的体验，但是，使用三方代码的时候这个问题却仍然存在。
+随着 beta 发布的完善，内部评估中不断移除不友好的标点符号，用真 optional 、非 optional 或永不为空的值来替代模糊解析的 optional。这极大提高了使用 Cocoa 时的体验，但是，使用三方代码的时候这个问题却仍然存在。
 
-But no longer—Swift 1.2 ships alongside a new version of Clang. New property attributes and pointer annotations allow you to indicate whether a pointer, be it an Objective-C property, method parameter, or return value, can or won't ever be `nil`.
+这种情况不复存在了！Swift 1.2 带来了新版本的 Clang。新的属性参数和指针标注允许指针、Objective-C 属性、方法参数或返回值是否可以为 `nil`。
 
-> - `nonnull`: Indicates that the pointer should/will never be `nil`. Pointers annotated with `nonnull` are imported into Swift as their non-optional base value (i.e., `NSData`).
-> - `nullable`: Indicates that the pointer can be `nil` in general practice. Imported into Swift as an optional value (`NSURL?`).
-> - `null_unspecified`: Continues the current functionality of importing into Swift as an implicitly unwrapped optional, ideally to be used during this annotation process only.
-> - `null_resettable`: Indicates that while a property will always have a value, it can be reset by assigning `nil`. Properties with a non-`nil` default value can be annotated this way, like `tintColor`. Imported into Swift as a (relatively safe) implicitly unwrapped optional. Document accordingly!
+> - `nonnull`：标示该指针 `不应该` 为 `nil`。在 Swift 中使用标注 `nonnull` 的指针时会保留他们原始的值（例如 `NSData`）。
+> - `nullable`：标示该指针在通常情况下 `可以` 为 `nil`。它们在 Swift 中会以 optional 值表示（比如 `NSURL?`）。
+> - `null_unspecified`：像以前一样的模糊解析 optional 类型，理想状态是只标注而不使用。
+> - `null_resettable`：标示这个属性永远会有一个值，也可以被赋为 `nil`。拥有非 `nil` 默认值的属性可以用这个字段标注，例如：`tintColor`。根据文档，这种属性在 Swift 中使用时会变成一种（相对安全）的模糊解析 optional 类型。
 
-The first three annotations can also be used with C pointers and block pointers, using the doubly-underscored `__nonnull`, `__nullable`, and `__null_unspecified`. The last annotation, `null_resettable`, is only valid as an Objective-C property attribute.
+前三种标注也可以通过双下划线前置（`__nonnull`、`__nullable` 和 `__null_unspecified`）用于 C 指针和 block 指针。最后一种 `null_resettable` 标注仅可用于 Objective-C 属性。
 
-### Nullability in Action
+### 立即动手尝试
 
-As an example to show the benefit of these annotations, let's take a look at a data controller used to handle a list of locations, each with a possible attached photo:
+下面的样例中，我们使用一个 data controller 来控制一个位置信息列表，每个位置信息可能附图。这个样例展示了这几种新标注的优点：
 
 ```objective-c
 @interface LocationDataController : NSObject
@@ -160,7 +160,7 @@ As an example to show the benefit of these annotations, let's take a look at a d
 @end
 ```
 
-Without any nullability annotations, each pointer in my `LocationDataController` class is imported to Swift as an implicitly unwrapped optional:
+如果不用空值标注，`LocationDataController` 类中的每个指针在 Swift 中使用时都会变成模糊解析的 optional 类型：
 
 ```swift
 class LocationDataController : NSObject {
@@ -172,7 +172,7 @@ class LocationDataController : NSObject {
 }
 ```
 
-Enough! With! The shouting! Here's how I can now annotate the Objective-C interface:
+这！么！多！感！叹！号！真！是！够！了！如果在 Objective-C 中就标注好：
 
 ```objective-c
 @interface LocationDataController : NSObject
@@ -185,7 +185,7 @@ Enough! With! The shouting! Here's how I can now annotate the Objective-C interf
 @end
 ```
 
-First, the properties—my `locations` list is `nonnull`, since at worst it will be an empty array, but `latestLocation` *can* be `nil` if there are no locations in the list yet. Likewise, the parameters to my two methods should always have a value, yet because not all locations have a photo, that second method returns a `nullable` photo. Back in Swift, the results are much better—that is, clearer about how to safely use the data controller and no more grumpy `!`s:
+首先 `locations` 列表是 `nonnull` 的，因为最糟糕的情况下它也就是一个空数组了，但如果列表中没有任何位置信息，`latestLocation` 却 *可以* 是 `nil`。同理，两个方法中的参数永远不应该为空。因为不是每个位置信息都有一张照片，所以第二个方法的返回值是 `nullable` 型的 Photo 实例。这种声明方式在 Swift 中就变得更好、更清晰、更安全，而且也没那么多烦人的感叹号了：
 
 ```swift
 class LocationDataController : NSObject {
@@ -199,9 +199,9 @@ class LocationDataController : NSObject {
 
 ### NS_ASSUME_NONNULL_BEGIN/END
 
-Annotating *any* pointer in an Objective-C header file causes the compiler to expect annotations for the entire file, bringing on a cascade of warnings. Given that most annotations will be `nonnull`, a new macro can help streamline the process of annotating existing classes. Simply mark the beginning and end of a section of your header with `NS_ASSUME_NONNULL_BEGIN` and `..._END`, then mark the exceptions.
+在 Objective-C 头文件中标注 *任何* 指针都会导致编译器对整个文件进行标注分析，带来不少的警告。因为大多数的标注都是 `nonnull` 的，一个用于标注已存在类的提高效率的宏就出现了。在头文件中，例外情况单独标注，其他地方开始和结尾的地方用 `NS_ASSUME_NONNULL_BEGIN` 和 `..._END` 包围起来就好了。
 
-Another revision of our data controller interface from above results in a more readable version with the exact same Swift profile:
+和上述 data controller 能在 Swift 中产生同样效果的另一个更易读的版本就出现了：
 
 ```objective-c
 @interface LocationDataController : NSObject
@@ -217,9 +217,9 @@ NS_ASSUME_NONNULL_END
 @end
 ```
 
-### Not Just for Swift
+### 不只是 Swift
 
-The new Objective-C nullability annotations have huge benefits for code on the Swift side of the fence, but there's a substantial gain here even without writing a line of Swift. Pointers marked as `nonnull` will now give a hint during autocomplete and yield a warning if sent `nil` instead of a proper pointer:
+新的 Objective-C 空值标注为 Swift 带来了巨大好处，与此同时如果不写任何 Swift 还是可以从中受益的。如果将 `nil` 值传给了带有 `nonnull` 标注的指针，那么自动补全时就会有提示：
 
 ```objective-c
 // Can I remove a photo by sending nil?
@@ -229,7 +229,7 @@ The new Objective-C nullability annotations have huge benefits for code on the S
 
 * * *
 
-Excitingly, all that is just half the story. In addition to the changes in Swift syntax and compiler savoir faire, the standard library has also seen a [major revision](http://swiftdoc.org/news/2015/02/swift1.2/), including a proper `Set` class (so long, [dear friend](https://github.com/natecook1000/SwiftSets/blob/master/Set.swift)). *Okaaay,* so none of our code works anymore, and Stack Overflow has 21,000 out-of-date Swift questions? It's still fun to be along for the ride.
+激动人心的是，关于这次更新的故事我们值降了一半。除了 Swift 语法的变化和编译器变异方式的变化之外，标准库也升级到了一个 [大版本](http://swiftdoc.org/news/2015/02/swift1.2/)，带来了新的 `Set` 类（再见了[朋友](https://github.com/natecook1000/SwiftSets/blob/master/Set.swift)）。*呵呵呵呵*，所以，我们以前的代码也都不能运行了，Stack Overflow 上又多了 21,000 个过期的 Swift 问题？其实想想还蛮有意思的。
 
 
 
