--- a/2015-02-09-swift-1.2.md
+++ b/2015-02-09-swift-1.2.md
@@ -4,11 +4,11 @@ category: Swift
 author: Nate Cook
 tags: swift
 translator: Croath Liu
-excerpt: "Swift 正如其名，速度飞快。随着 Swift 1.2 beta 版本的发布，其开发团队在这次快速加速俯冲中一次性响应了开发社区的诸多需求，带来了许多让激动人心的新特性。本周我们会花一点时间关注这个版本的两个明显提升使用体验的新功能：一个是 `if let` 语句 optional 绑定的巨大变化，另一个是 Objective-C 中的空值标注。"
+excerpt: "Swift 正如其名，速度飞快。随着 Swift 1.2 beta 版本的发布，其开发团队在这次加速俯冲中一次性响应了开发社区的诸多需求，带来了许多激动人心的新特性。本周我们会花一点时间关注这个版本的两个明显提升使用体验的新功能：一个是 `if let` 语句 optional 绑定的巨大变化，另一个是 Objective-C 中的空值标注。"
 hiddenlang: ""
 ---
 
-Swift 正如其名，速度飞快。本周将关注 Swift 1.2 版本的一个 *重大* 更新。Swift 开发团队在这次快速加速俯冲中一次性响应了开发社区的诸多需求，带来了许多让激动人心的新特性。本次发布的每一个小更新都带来了巨大的好处：增量构建、丰富了 Xcode 中的错误信息、提升 Xcode 稳定性、静态类属性、支持 C 的 union 和 bitfield、将 Swift 中的 `enum` 打通到 Objective-C 中、更安全的类型转换、单行闭包的提升等等。
+Swift 正如其名，速度飞快。本周将关注 Swift 1.2 版本的一个 *重大* 更新。Swift 开发团队在这次加速俯冲中一次性响应了开发社区的诸多需求，带来了许多激动人心的新特性。本次发布的每一个小更新都带来了巨大的好处：增量构建、丰富了 Xcode 中的错误信息、提升 Xcode 稳定性、静态类属性、支持 C 的 union 和 bitfield、将 Swift 中的 `enum` 打通到 Objective-C 中、更安全的类型转换、单行闭包的提升等等。
 
 在这么多的更新中我们主要关注两个明显提升使用体验的新功能：一个是 `if let` 语句 optional 绑定 *终于有了* 巨大变化，另一个是 Objective-C 中的空值标注。
 
@@ -47,7 +47,7 @@ if let a = a, b = b, c = c where c != 0 {
 > 
 > 一个 `if` 语句可以包含多个通过逗号分隔的 `let` 绑定。因为每个 `let` 可以绑定多个 optional *和* 一个 `where` 分句，所以通过这种方式可以支持真正更高级的逻辑。（感谢 [Stephen Celis](https://twitter.com/stephencelis) 帮忙解释清楚这点。）
 
-更棒的是，后续的绑定语句可以引用之前的绑定。这意味着你只用一个 `if let` 语句就可以解析 `Dictionary` 对象或者对 `AnyObject?` 值进行强制类型转换，然后将其用户另一个语句中。
+更棒的是，后续的绑定语句可以引用之前的绑定。这意味着你只用一个 `if let` 语句就可以解析 `Dictionary` 对象或者对 `AnyObject?` 值进行强制类型转换，然后将其用于另一个语句中。
 
 让我们回顾一个经典的例子，将 [这样一个庞大的 JSON 块](http://jsonplaceholder.typicode.com/users) 在 Swift 1.2 中解析。样例中用一个 `if let` 将 JSON 解析成指定的包含 `NSBundle`、`NSURL` 和 `NSData` 类型以及一些 `AnyObject?` 值的对象：
 
@@ -132,7 +132,7 @@ if let
 
 ## 空值标注
 
-在 Swift 第一版发布的时候，每一个对 Cocoa API 的调用方法都会返回一个模糊解析的 optional 类型（比如说 `AnyObject!`）。因为它们会在读取过程中让程序崩溃，所以如果没有清晰的文档表明该方法是否会返回一个 null 值name这种模糊解析内在是不安全的。这些都是不好的现象。Swift 确实能够调用 Cocoa API 了，但调用方法长得真奇怪。
+在 Swift 第一版发布的时候，每一个对 Cocoa API 的调用方法都会返回一个模糊解析的 optional 类型（比如说 `AnyObject!`）。因为它们会在读取过程中让程序崩溃，所以如果没有清晰的文档表明该方法是否会返回一个 null 值那么这种模糊解析内在是不安全的。这些都是不好的现象。Swift 确实能够调用 Cocoa API 了，但调用方法长得真奇怪。
 
 随着 beta 发布的完善，内部评估中不断移除不友好的标点符号，用真 optional 、非 optional 或永不为空的值来替代模糊解析的 optional。这极大提高了使用 Cocoa 时的体验，但是，使用三方代码的时候这个问题却仍然存在。
 
@@ -229,7 +229,7 @@ NS_ASSUME_NONNULL_END
 
 * * *
 
-激动人心的是，关于这次更新的故事我们值降了一半。除了 Swift 语法的变化和编译器变异方式的变化之外，标准库也升级到了一个 [大版本](http://swiftdoc.org/news/2015/02/swift1.2/)，带来了新的 `Set` 类（再见了[朋友](https://github.com/natecook1000/SwiftSets/blob/master/Set.swift)）。*呵呵呵呵*，所以，我们以前的代码也都不能运行了，Stack Overflow 上又多了 21,000 个过期的 Swift 问题？其实想想还蛮有意思的。
+激动人心的是，关于这次更新的故事我们只讲了一半。除了 Swift 语法的变化和编译器变异方式的变化之外，标准库也升级到了一个 [大版本](http://swiftdoc.org/news/2015/02/swift1.2/)，带来了新的 `Set` 类（再见了[朋友](https://github.com/natecook1000/SwiftSets/blob/master/Set.swift)）。*呵呵呵呵*，所以，我们以前的代码也都不能运行了，Stack Overflow 上又多了 21,000 个过期的 Swift 问题？其实想想还蛮有意思的。
 
 
 
