Category / tag fixes

--- a/2014-08-24-wkwebkit.md
+++ b/2014-08-24-wkwebkit.md
@@ -1,7 +1,7 @@
 ---
 title: WKWebView
 author: Mattt Thompson
-category: ""
+category: Cocoa
 excerpt: "iOS has a complicated relationship with the web. And it goes back to the very inception of the platform nearly a decade ago."
 ---
 
