Added Swift translations

--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -19,6 +19,15 @@ For the longest time, this boringly essential function was completely MIA, leavi
 
 But no longer! iOS 7 finally bakes-in Base64:
 
+~~~{swift}
+let string = "Lorem ipsum dolor sit amet."
+if let data = string.dataUsingEncoding(NSUTF8StringEncoding) {
+    let base64EncodedString = data.base64EncodedStringWithOptions(NSDataBase64EncodingOptions.allZeros)
+    
+    println(base64EncodedString) // @"TG9yZW0gaXBzdW0gZG9sYXIgc2l0IGFtZXQu"
+}
+~~~
+
 ~~~{objective-c}
 NSString *string = @"Lorem ipsum dolor sit amet.";
 NSString *base64EncodedString = [[string dataUsingEncoding:NSUTF8StringEncoding] base64EncodedStringWithOptions:0];
@@ -31,6 +40,16 @@ NSLog(@"%@", base64EncodedString); // @"TG9yZW0gaXBzdW0gZG9sYXIgc2l0IGFtZXQu"
 Foundation is blessed with a wealth of functionality for working with URIs. Unfortunately, many of the APIs for manipulating URLs are strewn across `NSString`, since `NSURL` is immutable.
 
 `NSURLComponents` dramatically improves this situation. Think of it as `NSMutableURL`:
+
+~~~{swift}
+if let components = NSURLComponents(string: "http://nshipster.com") {
+    components.path = "/iOS7"
+    components.query = "foo=bar"
+    
+    println(components.scheme!) // @"http"
+    println(components.URL!) // @"http://nshipster.com/iOS7?foo=bar"
+}
+~~~
 
 ~~~{objective-c}
 NSURLComponents *components = [NSURLComponents componentsWithString:@"http://nshipster.com"];
@@ -60,6 +79,13 @@ Anything with a notion of completed and total units is a candidate for `NSProgre
 
 `NSProgress` can be used to simply report overall progress in a localized way:
 
+~~~{swift}
+let progress = NSProgress(totalUnitCount: 100)
+progress.completedUnitCount = 42;
+
+println(progress.localizedDescription) // 42% completed
+~~~
+
 ~~~{objective-c}
 NSProgress *progress = [NSProgress progressWithTotalUnitCount:100];
 progress.completedUnitCount = 42;
@@ -68,6 +94,22 @@ NSLog(@"%@", [progress localizedDescription]); // 42% completed
 ~~~
 
 ...or it can be given a handler for stopping work entirely:
+
+~~~{swift}
+let timer = NSTimer(
+    timeInterval: 1.0,
+    target: self,
+    selector: "incrementCompletedUnitCount:",
+    userInfo: nil,
+    repeats: true
+)
+
+progress.cancellationHandler = {
+    timer.invalidate()
+}
+
+progress.cancel()
+~~~
 
 ~~~{objective-c}
 NSTimer *timer = [NSTimer timerWithTimeInterval:1.0
@@ -90,6 +132,13 @@ Rejoice! The `NSRangeException`-dodging convenience of `-lastObject` has finally
 
 Behold!
 
+~~~{swift}
+let array = [1, 2, 3] as NSArray
+
+println("First Object: \(array.firstObject)") // Optional(1)
+println("Last Object: \(array.lastObject)") // Optional(3)
+~~~
+
 ~~~{objective-c}
 NSArray *array = @[@1, @2, @3];
 
@@ -106,6 +155,26 @@ Refreshing!
 Since iOS 5, the Core Image framework has provided facial detection and recognition functionality through the `CIDetector` class. If it wasn't insaneballs enough that we could detect faces in photos, in iOS 7 we can even tell if that face is smiling or has its eyes closed. \*shudder\*
 
 In yet another free app idea, here's a snippet that might be used by a camera that only saves pictures of smiling faces:
+
+~~~{swift}
+import CoreImage
+        
+let smileDetector = CIDetector(
+    ofType: CIDetectorTypeFace,
+    context: context,
+    options: [
+        CIDetectorTracking : true,
+        CIDetectorAccuracy : CIDetectorAccuracyLow
+    ]
+)
+
+let features = smileDetector.featuresInImage(image, options: [CIDetectorSmile : true])
+if let feature = features.first as? CIFaceFeature where feature.hasSmile {
+    UIImageWriteToSavedPhotosAlbum(image, self, "didFinishWritingImage", features)
+} else {
+    label.text = "Say Cheese!"
+}
+~~~
 
 ~~~{objective-c}
 @import CoreImage;
@@ -125,6 +194,46 @@ if (([features count] > 0) && (((CIFaceFeature *)features[0]).hasSmile)) {
 ## AVCaptureMetaDataOutput
 
 Scan UPCs, QR codes, and barcodes of all varieties with `AVCaptureMetaDataOutput`, new to iOS 7. All you need to do is set it up as the output of an `AVCaptureSession`, and implement the `captureOutput:didOutputMetadataObjects:fromConnection:` method accordingly:
+
+~~~{swift}
+import AVFoundation
+
+let session = AVCaptureSession()
+let device = AVCaptureDevice.defaultDeviceWithMediaType(AVMediaTypeVideo)
+var error: NSError?
+
+let input = AVCaptureDeviceInput(device: device, error: &error)
+if let error = error {
+    println("Error: \(error)")
+} else {
+    session.addInput(input)
+}
+
+let output = AVCaptureMetadataOutput()
+output.setMetadataObjectsDelegate(self, queue: dispatch_get_main_queue())
+session.addOutput(output)
+output.metadataObjectTypes = [AVMetadataObjectTypeQRCode]
+
+session.startRunning()
+
+// MARK: - AVCaptureMetadataOutputObjectsDelegate
+
+func captureOutput(
+    captureOutput: AVCaptureOutput!,
+    didOutputMetadataObjects metadataObjects: [AnyObject]!,
+    fromConnection connection: AVCaptureConnection!) {
+    
+        var QRCode: String?
+        for metadata in metadataObjects as! [AVMetadataObject] {
+            if metadata.type == AVMetadataObjectTypeQRCode {
+                // This will never happen; nobody has ever scanned a QR code... ever
+                QRCode = (metadata as! AVMetadataMachineReadableCodeObject).stringValue
+            }
+        }
+        
+        println("QRCode: \(QRCode)")
+}
+~~~
 
 ~~~{objective-c}
 @import AVFoundation;
@@ -186,6 +295,17 @@ If nothing else, `AVCaptureMetaDataOutput` makes it possible to easily create a 
 
 Even though the number of people who have actually read something saved for later is only marginally greater than [the number of people who have ever used a QR code](http://picturesofpeoplescanningqrcodes.tumblr.com), it's nice that iOS 7 adds a way to add items to the Safari reading list with the new Safari Services framework.
 
+~~~{swift}
+import SafariServices
+
+let url = NSURL(string: "http://nshipster.com/ios7")
+SSReadingList.defaultReadingList().addReadingListItemWithURL(url,
+    title: "NSHipster",
+    previewText: "...",
+    error: nil
+)
+~~~
+
 ~~~{objective-c}
 @import SafariServices;
 
@@ -202,7 +322,18 @@ Text-to-Speech has been the killer feature of computers for [accessibility](http
 
 iOS 7 brings the power of Siri with the convenience of a [Speak & Spell](http://en.wikipedia.org/wiki/Speak_%26_Spell_%28toy%29) in a new class `AVSpeechSynthesizer`:
 
+~~~{swift}
+import AVFoundation
+
+let synthesizer = AVSpeechSynthesizer()
+let utterance = AVSpeechUtterance(string: "Just what do you think you're doing, Dave?")
+utterance.rate = AVSpeechUtteranceMinimumSpeechRate // Tell it to me slowly
+synthesizer.speakUtterance(utterance)
+~~~
+
 ~~~{objective-c}
+@import AVFoundation;
+
 AVSpeechSynthesizer *synthesizer = [[AVSpeechSynthesizer alloc] init];
 AVSpeechUtterance *utterance = [AVSpeechUtterance speechUtteranceWithString:@"Just what do you think you're doing, Dave?"];
 utterance.rate = AVSpeechUtteranceMinimumSpeechRate; // Tell it to me slowly
@@ -214,6 +345,19 @@ utterance.rate = AVSpeechUtteranceMinimumSpeechRate; // Tell it to me slowly
 Finally, we end our showcase of iOS 7's new and noteworthy APIs with another class that has NSHipsters crying out "finally!": `MKDistanceFormatter`.
 
 As advertised, `MKDistanceFormatter` provides a way to convert distances into localized strings using either imperial or metric units:
+
+~~~{swift}
+import CoreLocation
+import MapKit
+
+let sanFrancisco = CLLocation(latitude: 37.775, longitude: -122.4183333)
+let portland = CLLocation(latitude: 45.5236111, longitude: -122.675)
+let distance = portland.distanceFromLocation(sanFrancisco)
+
+let formatter = MKDistanceFormatter()
+formatter.units = .Imperial
+println(formatter.stringFromDistance(distance)) // 535 miles
+~~~
 
 ~~~{objective-c}
 @import CoreLocation;
