--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -24,7 +24,7 @@ let string = "Lorem ipsum dolor sit amet."
 if let data = string.dataUsingEncoding(NSUTF8StringEncoding) {
     let base64EncodedString = data.base64EncodedStringWithOptions(NSDataBase64EncodingOptions.allZeros)
     
-    println(base64EncodedString) // @"TG9yZW0gaXBzdW0gZG9sYXIgc2l0IGFtZXQu"
+    println(base64EncodedString)    // TG9yZW0gaXBzdW0gZG9sYXIgc2l0IGFtZXQu
 }
 ~~~
 
@@ -32,7 +32,7 @@ if let data = string.dataUsingEncoding(NSUTF8StringEncoding) {
 NSString *string = @"Lorem ipsum dolor sit amet.";
 NSString *base64EncodedString = [[string dataUsingEncoding:NSUTF8StringEncoding] base64EncodedStringWithOptions:0];
 
-NSLog(@"%@", base64EncodedString); // @"TG9yZW0gaXBzdW0gZG9sYXIgc2l0IGFtZXQu"
+NSLog(@"%@", base64EncodedString);  // TG9yZW0gaXBzdW0gZG9sYXIgc2l0IGFtZXQu
 ~~~
 
 ## NSURLComponents & NSCharacterSet (NSURLUtilities)
@@ -46,8 +46,8 @@ if let components = NSURLComponents(string: "http://nshipster.com") {
     components.path = "/iOS7"
     components.query = "foo=bar"
     
-    println(components.scheme!) // @"http"
-    println(components.URL!) // @"http://nshipster.com/iOS7?foo=bar"
+    println(components.scheme!)     // http
+    println(components.URL!)        // http://nshipster.com/iOS7?foo=bar
 }
 ~~~
 
@@ -56,8 +56,8 @@ NSURLComponents *components = [NSURLComponents componentsWithString:@"http://nsh
 components.path = @"/iOS7";
 components.query = @"foo=bar";
 
-NSLog(@"%@", components.scheme); // @"http"
-NSLog(@"%@", [components URL]); // @"http://nshipster.com/iOS7?foo=bar"
+NSLog(@"%@", components.scheme);    // http
+NSLog(@"%@", [components URL]);     // http://nshipster.com/iOS7?foo=bar
 ~~~
 
 Each property for URL components also has a `percentEncoded*` variation (e.g. `user` & `percentEncodedUser`), which forgoes any additional URI percent encoding of special characters.
@@ -96,13 +96,8 @@ NSLog(@"%@", [progress localizedDescription]); // 42% completed
 ...or it can be given a handler for stopping work entirely:
 
 ~~~{swift}
-let timer = NSTimer(
-    timeInterval: 1.0,
-    target: self,
-    selector: "incrementCompletedUnitCount:",
-    userInfo: nil,
-    repeats: true
-)
+let timer = NSTimer(timeInterval: 1.0, target: self, selector: "incrementCompletedUnitCount:",
+    userInfo: nil, repeats: true)
 
 progress.cancellationHandler = {
     timer.invalidate()
@@ -135,15 +130,15 @@ Behold!
 ~~~{swift}
 let array = [1, 2, 3] as NSArray
 
-println("First Object: \(array.firstObject)") // Optional(1)
-println("Last Object: \(array.lastObject)") // Optional(3)
+println("First Object: \(array.firstObject)")   // First Object: Optional(1)
+println("Last Object: \(array.lastObject)")     // Last Object: Optional(3)
 ~~~
 
 ~~~{objective-c}
 NSArray *array = @[@1, @2, @3];
 
-NSLog(@"First Object: %@", [array firstObject]); // 1
-NSLog(@"Last Object: %@", [array lastObject]); // 3
+NSLog(@"First Object: %@", [array firstObject]); // First Object: 1
+NSLog(@"Last Object: %@", [array lastObject]);   // Last Object: 3
 ~~~
 
 Refreshing!
@@ -159,18 +154,12 @@ In yet another free app idea, here's a snippet that might be used by a camera th
 ~~~{swift}
 import CoreImage
         
-let smileDetector = CIDetector(
-    ofType: CIDetectorTypeFace,
-    context: context,
-    options: [
-        CIDetectorTracking : true,
-        CIDetectorAccuracy : CIDetectorAccuracyLow
-    ]
-)
+let smileDetector = CIDetector(ofType: CIDetectorTypeFace, context: context,
+    options: [CIDetectorTracking: true, CIDetectorAccuracy: CIDetectorAccuracyLow])
 
-let features = smileDetector.featuresInImage(image, options: [CIDetectorSmile : true])
+var features = smileDetector.featuresInImage(ciImage, options: [CIDetectorSmile: true])
 if let feature = features.first as? CIFaceFeature where feature.hasSmile {
-    UIImageWriteToSavedPhotosAlbum(image, self, "didFinishWritingImage", features)
+    UIImageWriteToSavedPhotosAlbum(UIImage(CIImage: ciImage)!, self, "didFinishWritingImage", &features)
 } else {
     label.text = "Say Cheese!"
 }
@@ -183,9 +172,9 @@ CIDetector *smileDetector = [CIDetector detectorOfType:CIDetectorTypeFace
                                 context:context
                                 options:@{CIDetectorTracking: @YES,
                                           CIDetectorAccuracy: CIDetectorAccuracyLow}];
-NSArray *features = [smileDetector featuresInImage:image options:@{CIDetectorSmile:@YES}];
+NSArray *features = [smileDetector featuresInImage:ciImage options:@{CIDetectorSmile:@YES}];
 if (([features count] > 0) && (((CIFaceFeature *)features[0]).hasSmile)) {
-    UIImageWriteToSavedPhotosAlbum(image, self, @selector(didFinishWritingImage), features);
+    UIImageWriteToSavedPhotosAlbum([UIImage imageWithCIImage:ciImage], self, @selector(didFinishWritingImage), features);
 } else {
     self.label.text = @"Say Cheese!"
 }
@@ -299,11 +288,8 @@ Even though the number of people who have actually read something saved for late
 import SafariServices
 
 let url = NSURL(string: "http://nshipster.com/ios7")
-SSReadingList.defaultReadingList().addReadingListItemWithURL(url,
-    title: "NSHipster",
-    previewText: "...",
-    error: nil
-)
+SSReadingList.defaultReadingList().addReadingListItemWithURL(url, title: "NSHipster",
+    previewText: "...", error: nil)
 ~~~
 
 ~~~{objective-c}
@@ -327,7 +313,7 @@ import AVFoundation
 
 let synthesizer = AVSpeechSynthesizer()
 let utterance = AVSpeechUtterance(string: "Just what do you think you're doing, Dave?")
-utterance.rate = AVSpeechUtteranceMinimumSpeechRate // Tell it to me slowly
+utterance.rate = AVSpeechUtteranceMinimumSpeechRate   // Tell it to me slowly
 synthesizer.speakUtterance(utterance)
 ~~~
 
@@ -336,7 +322,7 @@ synthesizer.speakUtterance(utterance)
 
 AVSpeechSynthesizer *synthesizer = [[AVSpeechSynthesizer alloc] init];
 AVSpeechUtterance *utterance = [AVSpeechUtterance speechUtteranceWithString:@"Just what do you think you're doing, Dave?"];
-utterance.rate = AVSpeechUtteranceMinimumSpeechRate; // Tell it to me slowly
+utterance.rate = AVSpeechUtteranceMinimumSpeechRate;  // Tell it to me slowly
 [synthesizer speakUtterance:utterance];
 ~~~
 
