--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -4,12 +4,12 @@ title: "#pragma"
 author: Mattt Thompson
 translator: Zihan Xu
 category: Objective-C
-excerpt: "#pragma声明是彰显Objective-C工艺的标志之一。虽然#pragma最初的目的是为了使得源代码在不同的编译器下兼容的，但精明的Xcode编码器将#pragma使用到了极致。"
+excerpt: "\#pragma 声明是彰显Objective-C工艺的标志之一。虽然 \#pragma最初 的目的是为了使得源代码在不同的编译器下兼容的，但精明的 Xcode 编码器将 \#pragma 使用到了极致。"
 ---
 
-`#pragma`声明是彰显Objective-C工艺的标志之一。虽然`#pragma`最初的目的是为了使得源代码在不同的编译器下兼容的，但精明的Xcode编码器将`#pragma`使用到了极致。
+`#pragma` 声明是彰显 Objective-C 工艺的标志之一。虽然 `#pragma` 最初的目的是为了使得源代码在不同的编译器下兼容的，但精明的Xcode编码器将 `#pragma` 使用到了极致。
 
-在现在的背景下，`#pragma`避开了注释和代码之间的界限。作为预处理指令，`#pragma`在编译时进行计算。但它并不像如`#ifdef...#endif`之类的宏，`#pragma`的使用方式不会改变你的应用运行时的行为。相反的，`#pragma`声明主要由Xcode用来完成两个主要任务：整理代码和防止编译器警告。
+在现在的背景下，`#pragma` 避开了注释和代码之间的界限。作为预处理指令，`#pragma` 在编译时进行计算。但它并不像如 `#ifdef...#endif` 之类的宏，`#pragma` 的使用方式不会改变你的应用运行时的行为。相反的，`#pragma` 声明主要由 Xcode 用来完成两个主要任务：整理代码和防止编译器警告。
 
 ## 整理你的代码
 
@@ -49,7 +49,7 @@ excerpt: "#pragma声明是彰显Objective-C工艺的标志之一。虽然#pragma
 }
 ~~~
 
-在你的`@implementation`中使用`#pragma mark`来将代码分割成逻辑区块。这些逻辑区块不仅仅使得阅读代码本身容易许多，也为Xcode源导航增加了视觉线索（`#pragma mark`声明前有一个水平分割并由破折号（`－`）开始）。
+在你的 `@implementation` 中使用 `#pragma mark` 来将代码分割成逻辑区块。这些逻辑区块不仅仅使得阅读代码本身容易许多，也为Xcode源导航增加了视觉线索（`#pragma mark` 声明前有一个水平分割并由破折号（`－`）开始）。
 
 ![Xcode Sections](http://nshipster.s3.amazonaws.com/pragma-xcode-sections.png)
 
