--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -4,7 +4,7 @@ title: "#pragma"
 author: Mattt Thompson
 translator: Zihan Xu
 category: Objective-C
-excerpt: "\#pragma 声明是彰显Objective-C工艺的标志之一。虽然 \#pragma最初 的目的是为了使得源代码在不同的编译器下兼容的，但精明的 Xcode 编码器将 \#pragma 使用到了极致。"
+excerpt: "#pragma 声明是彰显Objective-C工艺的标志之一。虽然 #pragma最初的目的是为了使得源代码在不同的编译器下兼容的，但精明的 Xcode 编码器将 #pragma 使用到了极致。"
 ---
 
 `#pragma` 声明是彰显 Objective-C 工艺的标志之一。虽然 `#pragma` 最初的目的是为了使得源代码在不同的编译器下兼容的，但精明的Xcode编码器将 `#pragma` 使用到了极致。
