--- a/2015-06-29-cloudkit.md
+++ b/2015-06-29-cloudkit.md
@@ -93,7 +93,7 @@ CloudKit will connect to the Internet asynchronously when `saveRecord:completion
 You should check the error code of the `NSError` object to detect which kind of error you are dealing with. A `CKErrorNetworkUnavailable` error may occur if you were on a bad internet connection, and what you need to do is to retry the operation after failure. But when to retry? Immediately or 10 seconds later? Don't worry, CloudKit offers a suggestion in the error's `userInfo` dictionary with the key `CKErrorRetryAfterKey`:
 
 ````swift
-if let retryAfterValue = error.userInfo[CKErrorRetryAfterKey] as? Double {
+if let retryAfterValue = error.userInfo[CKErrorRetryAfterKey] as? NSTimeInterval {
     let retryAfterDate = NSDate(timeIntervalSinceNow: retryAfterValue)
     // ...
 }
@@ -143,7 +143,7 @@ publicDB.fetchRecordWithID(greatID) { fetchedPlace, error in
 CKRecordID *greatID = [[CKRecordID alloc] initWithRecordName:@"GreatPlace"];
     
 [publicDB fetchRecordWithID:greatID completionHandler:^(CKRecord *fetchedPlace, NSError *error) {
-    if (error == nil) {
+    if (fetchedPlace != nil) {
         NSString *name = fetchedPlace[@"name"];
         fetchedPlace[@"name"] = [name stringByAppendingString:@" Door A"];
             
@@ -151,7 +151,7 @@ CKRecordID *greatID = [[CKRecordID alloc] initWithRecordName:@"GreatPlace"];
             //...
         }];
     } else {
-        //...
+        // handle errors here
     }
 }];
 ````
