--- a/2015-06-29-cloudkit.md
+++ b/2015-06-29-cloudkit.md
@@ -2,6 +2,7 @@
 title: CloudKit
 author: Croath Liu
 category: Cocoa
+translator: Croath Liu
 excerpt: "作为 iOS 开发者，如果想自己独立制作应用，有时可能需要写一些后端代码。即使对于能够胜任这项工作的移动开发者而言，这不仅意味着要写代码，跟多的是长期维护。最糟糕的情况可能并不是大家不喜欢你的应用，而是在巨大流量压力下你的服务器宕机了。\n\n幸运的是，现在我们有 CloudKit 了。苹果替我们操心这些事情，你只管让应用变得完美。"
 ---
 
