--- a/2015-06-22-ios9.md
+++ b/2015-06-22-ios9.md
@@ -15,7 +15,7 @@ WWDC 2015 虽不像往届那样精彩纷呈，但却丝毫不缺乏亮点。 wat
 
 ## 字符串变形
 
-以前深藏在 Core Fundation 的字符串变形这次被带到了 `NSString` 和 Swift `String` 中。这让 Cocoa 这项强大功能变得十分易用，因为不用再去理会桥接 `CFStringRef` 所带来的麻烦。下面是一些使用新 `NSStringTransform*` 常量来进行字符串变形的例子：
+以前深藏在 Core Foundation 的字符串变形这次被带到了 `NSString` 和 Swift `String` 中。这让 Cocoa 这项强大功能变得十分易用，因为不用再去理会桥接 `CFStringRef` 所带来的麻烦。下面是一些使用新 `NSStringTransform*` 常量来进行字符串变形的例子：
 
 ### 音译
 
