--- a/2015-06-22-ios9.md
+++ b/2015-06-22-ios9.md
@@ -105,7 +105,7 @@ class ViewController : UIViewController, CLLocationManagerDelegate {
 ```
 
 
-## Swfit 化
+## Swift 化
 
 iOS 9 和 OS X 10.11 对 Cocoa API 进行了数千项小改进，使 Swift 互用性变得更加安全和简单。这些改进从熟悉的空值标注开始，将隐式打开地参数和返回值变为真正的 Optional 或者非 Optional 的数据类型。
 
