--- a/2015-06-29-cloudkit.md
+++ b/2015-06-29-cloudkit.md
@@ -52,7 +52,7 @@ There are 7 different fundamental objects in CloudKit. You may have seen this el
 
 ### Convenience API
 
-CloudKit's convenience API is there for do basic operations such as reading, writing, and editing records.
+CloudKit's convenience API is there to do basic operations such as reading, writing, and editing records.
 
 Let's work on our check-in application. To get started, import the CloudKit framework and get a reference to the public database:
 
