--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -107,7 +107,7 @@ It all has to do with an optimization technique known as [string interning](http
 
 Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool.
 
-`themoreyouknow.gif`.
+<img src=http://i.giphy.com/83QtfwKWdmSEo.gif>
 
 ## Hashing
 
